Device z-index image solved with responsivity

--- a/style.css
+++ b/style.css
@@ -39,7 +39,16 @@ h2{
   font-size: 16px;
 }
 
+.nav.navbar-nav.navbar-right li a{
+  color: white;
+}
+
+
 /* FIRST BLOCK  */
+
+.container-fluid.min-height{
+  min-height: 100vh;
+}
 [background="bg-pattern"]{
   background-size: contain;
   background: url("https://blackrockdigital.github.io/startbootstrap-new-age/img/bg-pattern.png"),linear-gradient(to left, #7b4397, #dc2430);
@@ -76,11 +85,17 @@ h1.text-content{
   position: relative;
 }
 
-#img-screen{
-  margin-top: 25%;
+.col-md-4.col-md-offset-1{
   position: relative;
-  z-index: 1;
-  padding-bottom: 20%;
+
+}
+
+#img-screen{
+  width: 81%;
+  position: absolute;
+  top: 12%;
+  right: 9%;
+
 }
 
 
